[package]
name = "bevy_async"
version = "0.19.0-dev"
edition = "2024"
description = "Provides interop between the ecs and async runtimes"
homepage = "https://bevy.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "async"]

[features]
default = ["std", "bevy_tasks"]

std = [
    "bevy_app/std",
    "bevy_ecs/std",
    "bevy_platform/std",
    "scoped_static_storage/std",
    "keyed_concurrent_queue/std",
]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.19.0-dev", default-features = false }
bevy_ecs = { path = "../bevy_ecs", version = "0.19.0-dev", default-features = false }
bevy_ecs_macros = { path = "../bevy_ecs/macros", version = "0.19.0-dev" }
bevy_platform = { path = "../bevy_platform", version = "0.19.0-dev", default-features = false }
bevy_tasks = { path = "../bevy_tasks", version = "0.19.0-dev", default-features = false, optional = true }

# other
scoped_static_storage = { version = "0.1.2", default-features = false }
keyed_concurrent_queue = { version = "0.1.3", default-features = false }
thiserror = { version = "2", default-features = false }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--generate-macro-expansion",
]
all-features = true