[package]
name = "bevy_audio"
version = "0.18.0-dev"
edition = "2024"
description = "Provides audio functionality for Bevy Engine"
homepage = "https://bevy.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.18.0-dev" }
bevy_asset = { path = "../bevy_asset", version = "0.18.0-dev" }
bevy_ecs = { path = "../bevy_ecs", version = "0.18.0-dev" }
bevy_math = { path = "../bevy_math", version = "0.18.0-dev" }
bevy_reflect = { path = "../bevy_reflect", version = "0.18.0-dev" }
bevy_transform = { path = "../bevy_transform", version = "0.18.0-dev" }

# other
rodio = { version = "0.21", default-features = false, features = ["playback"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }

[target.'cfg(target_os = "android")'.dependencies]
cpal = { version = "0.16", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# TODO: Assuming all wasm builds are for the browser. Require `no_std` support to break assumption.
rodio = { version = "0.21", default-features = false, features = [
  "wasm-bindgen",
  "playback",
] }
bevy_app = { path = "../bevy_app", version = "0.18.0-dev", default-features = false, features = [
  "web",
] }
bevy_reflect = { path = "../bevy_reflect", version = "0.18.0-dev", default-features = false, features = [
  "web",
] }

[features]
fallback-mp3 = ["rodio/minimp3"]
fallback-flac = ["rodio/claxon"]
fallback-wav = ["rodio/hound"]
# TODO: Swap fallback-vorbis and vorbis features
# once https://github.com/RustAudio/rodio/issues/775 is resolved
fallback-vorbis = ["rodio/vorbis"]
mp3 = ["rodio/mp3"]
mp4 = ["rodio/mp4"]
flac = ["rodio/flac"]
wav = ["rodio/wav"]
vorbis = ["rodio/lewton"]
aac = ["rodio/symphonia-aac"]
audio-all = [
  "rodio/flac",
  "rodio/mp3",
  "rodio/mp4",
  "rodio/vorbis",
  "rodio/wav",
]
# Enable using a shared stdlib for cxx on Android.
android_shared_stdcxx = ["cpal/oboe-shared-stdcxx"]

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
