[package]
name = "bevy_basis_universal"
version = "0.19.0-dev"
edition = "2024"
description = "Provides basis universal texture loader and saver for Bevy Engine"
homepage = "https://bevy.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
saver = ["basisu_c_sys/encoder"]

[dependencies]
basisu_c_sys = { version = "0.6.0", default-features = false, features = ["extra", "serde"] }
bevy_app = { version = "0.19.0-dev", path = "../bevy_app", default-features = false }
bevy_asset = { version = "0.19.0-dev", path = "../bevy_asset", default-features = false }
bevy_ecs = { version = "0.19.0-dev", path = "../bevy_ecs", default-features = false }
bevy_image = { version = "0.19.0-dev", path = "../bevy_image", default-features = false }
bevy_log = { version = "0.19.0-dev", path = "../bevy_log", default-features = false }
bevy_platform = { version = "0.19.0-dev", path = "../bevy_platform", default-features = false }
bevy_reflect = { version = "0.19.0-dev", path = "../bevy_reflect", default-features = false }
bevy_tasks = { version = "0.19.0-dev", path = "../bevy_tasks", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.18", default-features = false }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = [
  "-Zunstable-options",
  "--generate-link-to-definition",
  "--generate-macro-expansion",
]
all-features = true
