[package]
name = "bevy_bone_attachments"
version = "0.16.0-dev"
edition = "2024"
description = "Experimental implementation of bone attachments"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "animation"]
rust-version = "1.85.0"

[dependencies]
bevy_animation = { path = "../bevy_animation", version = "0.16.0-dev", default-features = false }
bevy_app = { path = "../bevy_app", version = "0.16.0-dev", default-features = false }
bevy_asset = { path = "../bevy_asset", version = "0.16.0-dev", default-features = false, optional = true }
bevy_derive = { path = "../bevy_derive", version = "0.16.0-dev", default-features = false }
bevy_ecs = { path = "../bevy_ecs", version = "0.16.0-dev", default-features = false }
bevy_platform_support = { path = "../bevy_platform_support", version = "0.16.0-dev", default-features = false }
bevy_reflect = { path = "../bevy_reflect", version = "0.16.0-dev", default-features = false }
bevy_scene = { path = "../bevy_scene", version = "0.16.0-dev", default-features = false, optional = true }
bevy_transform = { path = "../bevy_transform", version = "0.16.0-dev", default-features = false }

tracing = { version = "0.1", default-features = false }

[features]
bevy_scene = ["dep:bevy_scene", "dep:bevy_asset"]

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
